deleting paragraph limited lines, no longer needed, change textWrap width and font-size on title

--- a/components/storiesComponents/storiesCarousel/storiesCarousel.module.scss
+++ b/components/storiesComponents/storiesCarousel/storiesCarousel.module.scss
@@ -33,13 +33,13 @@
     text-align: center;
     
     .textWrap {
-      max-width: 40em;
+      max-width: 45em;
       margin: 0 auto;
     }
 
     h3{
-      font-size: 2.3rem;
-      margin-bottom: 0.5em;;
+      font-size: 2rem;
+      margin-bottom: 1.2em;
 
       @media screen and (min-width: $md) {
       margin: 0.7em 0;
@@ -51,11 +51,7 @@
       display: none;
 
       @media screen and (min-width: $md) {
-        display: -webkit-box;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        -webkit-box-orient: vertical;
-        -webkit-line-clamp: 3;
+        display: block;
       }
     }
 
